[package]
name = "tir"
version = "0.0.0"
authors = ["Rasmus Nylander"]
edition = "2021"
description = "For now, but a squat, but then: a great tool! A tool revealing what's hidden, on HPCs far away. No need for a file transfer, you can see it right here. By ANSI we render, what's never seen before – Acending to heaven, the headfull masses below."
documentation = "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
readme = "README.md"
#homepage = ""
repository = "https://github.com/RasmusNylander/tir"
license = "MIT"
keywords = ["image", "viewer", "cli", "terminal", "ANSI"]
categories = ["command-line-utilities", "multimedia::images", "computer-vision"]
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
